--- a/views/home.hbs
+++ b/views/home.hbs
@@ -8,9 +8,11 @@
      <h2>
        Te logueaste correctamente. Nos alegra que hayas vuelto.
     </h2>
+    
+    <div class="container text-center m-5">
+   <li class="btn btn-dark btn-lg"><a href="/api/index2" class="nav-link px-2 text-muted">Entrar a la cocina</a></li>
 
-
-
-
+   
+</div>
     
 </div>
